crates/reinhardt-core/macros/tests/ui/settings/fail/composition_duplicate_types.rs
use reinhardt_macros::settings;

#[settings(primary: Foo | replica: Foo)]
pub struct BadSettings;

fn main() {}
