crates/reinhardt-core/macros/tests/ui/settings/fail/composition_duplicate_types.stderr
error: Duplicate fragment type `Foo`.
 --> tests/ui/settings/fail/composition_duplicate_types.rs:3:1
  |
3 | #[settings(primary: Foo | replica: Foo)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `settings` (in Nightly builds, run with -Z macro-backtrace for more info)
